--- a/mdapi/retrieveUnpackaged/package.xml
+++ b/mdapi/retrieveUnpackaged/package.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
+        <members>Product2Extension</members>
+        <members>Product2Helper</members>
+        <members>Product2Tests</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
         <members>Product2New</members>
         <name>ApexPage</name>
     </types>
