--- a/mdapi/retrieveUnpackaged/package.xml
+++ b/mdapi/retrieveUnpackaged/package.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
+        <members>ChartHelper</members>
         <members>Product2Extension</members>
         <members>Product2Helper</members>
         <members>Product2Tests</members>
